--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">University Homepage</a>, <a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>, <a href="https://bsky.app/profile/jiaoyanchen.bsky.social">BlueSky</a>, <A href="./files/CV_Jiaoyan.pdf">CV</A> </p>
+      <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Page</a>,  <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>,
+          <!-- <a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://bsky.app/profile/jiaoyanchen.bsky.social">BlueSky</a>, -->
+          <A href="./files/CV_Jiaoyan.pdf">CV</A> </p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -40,47 +42,47 @@
 <P>
     I'm a Lecturer (Assistant Professor) in Department of Computer Science, The University of Manchester, and a part-time Senior Researcher in Department of Computer Science, University of Oxford.
     Before that, I was a full-time Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and worked shortly as a postdoctoral in Heidelberg University.
-    My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology.
-    I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
+    My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">09/01/2025: Visit Southeast University</li>
     <li style="margin-bottom:5px">11/11/2024: Attend EMNLP'24</li>
     <li style="margin-bottom:5px">31/10/2024: Visit University of Stuttgart for invited talk</li>
     <li style="margin-bottom:5px">25/09/2024: Two papers accepted in NeurIPS'24</li>
-    <li style="margin-bottom:5px">20/09/2024: One paper accepted in EMNLP'24</li>
     <!--
+    <li style="margin-bottom:5px">20/09/2024: One paper accepted in EMNLP'24</li>
     <li style="margin-bottom:5px">20/09/2024: Attending CCKS-IJCKG 2024 in Chongqing, China </li>
     <li style="margin-bottom:5px">19/08/2024: One paper accepted in ACM Transactions on the Web </li>
     -->
 
 </ul>
     </p>
-    <P>
-        &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
-    </P>
+
 
 <h4>
 Research Interests
 </h4>
 <p><ul>
-<li style="margin-bottom:5px"> <b>Neural-symbolic Knowledge Representation and Reasoning</b>: the embedding, inference, construction and curation of knowledge graphs and OWL ontologies.
+<li style="margin-bottom:5px"> <b>Knowledge Representation</b>: construction and curation of knowledge graphs and ontologies.
 </li>
-<li style="margin-bottom:5px"> <b>Language Model and Data Intensive Systems</b>: augmenting large language models (LLMs) with knowledge graphs, ontologies and data lakes; retrieval augmented generation (RAG); natural language inference.
+<li style="margin-bottom:5px"> <b>Language Model and Data Intensive Systems</b>: augmenting large language models (LLMs) with knowledge graphs, ontologies and data lakes, retrieval augmented generation.
 </li>
-    <li style="margin-bottom:5px"><b>Machine Learning</b>:
-        knowledge-aware zero-shot, few-shot and transfer learning; knowledge graph and ontology embedding.
+    <li style="margin-bottom:5px"><b>Machine Learning</b>: knowledge representation learning, neural-symbolic reasoning.
 </li>
 </ul>
 
 </p>
+    <P>
+        &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> of these topics in UoM. Please email me if you have interests.
+    </P>
 
 
 <!-- <P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM. Email me your CV or apply <A href="https://www.jobs.manchester.ac.uk/Job/JobDetail?JobId=27858">here</A>.</P> -->
 
-<h4>Research Grants and Projects</h4>
+<h4>Current Research Grants and Projects</h4>
 <p><ul>
     <li style="margin-bottom:5px">
         EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
@@ -94,10 +96,10 @@ Research Interests
     <li style="margin-bottom:5px">
         Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 30.6K GBP, 07/2024 - 01/2025, PI.
     </li>
+    <!--
     <li style="margin-bottom:5px">
         Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 19K GBP, 11/2022 - 04/2023, PI.
     </li>
-    <!--
     <li style="margin-bottom:5px">
         As a researcher, I'm also working on the e-commerce taxonomy curation projection funded by eBay in University of Oxford, and have finished working for several knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
     project of the Alan Turing Institute, and the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">knowledge graph construction</A> project funded by Samsung Research UK.
@@ -109,49 +111,65 @@ Research Interests
 </p>
 
 
-<h4>Services and Activities</h4>
+<h4>Current Services</h4>
 <p><ul>
-   <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
-    <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 - ).</li>
     <li style="margin-bottom:5px">Editor Board of Data Intelligence (2021 - ).</li>
+    <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
+    <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
+    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - 2024). </li>
+    <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), and some NLP/AI conferences.</li>
+
+    <!--
     <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 - 2023).</li>
-    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 - 2024). </li>
-<li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 - 2023).</li>
-<li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
     <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), AAAI, IJCAI, ESWC, CIKM, ACL, etc.</li>
+    <li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 - 2023).</li>
+    <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
 
     <li style="margin-bottom:5px">Associate member of <A href="https://sirius-labs.no/data-science/">SIRIUS Centre for Scalable Data Access </A> in Norway. (11/2017 - 12/2023) </li>
 <li style="margin-bottom:5px">Consultant on knowledge graph construction (in collaboration with Xi Chen), Jarvis Lab of Tencent Technology, Shenzhen, China. (03/2020 - 02/2021)</li>
 <li style="margin-bottom:5px">Consultant, Oxford Semantic Technology, Oxford, UK. (12/2019 - 02/2020)</li>
 <li style="margin-bottom:5px">Enterprise Fellow of MPLS Division of University of Oxford. (10/2019 - 09/2020)</li>
+-->
 </ul></p>
 
 <h4>Publications</h4>
-<p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./publications.html">Selected</A></p>
+<p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./files/CV_Jiaoyan.pdf#page=6">Selected</A></p>
 
 <h4>Invited Talks and Tutorials</h4>
-<p> &nbsp  &nbsp  &nbsp<A href="./Talks.html">Selected</A></p>
+    <ul>
 
-<h4>Softwares</h4>
+        <li style="margin-bottom:5px">Integrating Knowledge Graphs and Large Language Models for Advancing Scientific Research. Tutorial at Learning on Graph Conference (LoG), 26/11/2024. <A href="files/LoG_Tutorial.pdf">Slides</A></li>
+    <li style="margin-bottom:5px">Data Intensive Question Answering with Large Language Models. Invited Talk at University of Stuttgart. 31/10/2024. <A href="files/QA_LLM_Stuttgart_10_2024.pdf">Slides</A></li>
+    <li style="margin-bottom:5px">Knowledge Engineering meets (Large) Language Models. Amazon Search Research Talk Series. 12/07/2024. <A href="files/Amazon_Search_Research_Talk_July_2024.pdf">Slides</A></li>
+<li style="margin-bottom:5px">Neural-symbolic Knowledge Representation and Reasoning with Ontology and Knowledge Graph Embeddings. Seminar at King Abdullah University of Science and Technology (KAUST), 04/2024. <A href="files/Seminar_KAUST_04_2024.pdf">Slides</A></li>
+<li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-ijcai-2023/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in IJCAI 2023 (August 19 - 25). </li>
+</ul>
+<p> &nbsp  &nbsp  &nbsp See <A href="./files/CV_Jiaoyan.pdf#page=2">CV</A> for a complete list</p>
+
+<h4>Software</h4>
 <p><ul>
     <li style="margin-bottom:5px"><A href="https://github.com/KRR-Oxford/OWL2Vec-Star">OWL2Vec*</A> (an OWL ontology embedding framework) </li>
     <li style="margin-bottom:5px"><A href="https://github.com/KRR-Oxford/DeepOnto">DeepOnto</A> (a library for ontology engineering with language models and machine learning) </li>
 </ul></p>
 
 
-<h4>Teaching</h4>
+<h4>Current Teaching</h4>
 <p><ul>
-    <li style="margin-bottom:5px">"Neural-symbolic Knowledge Representation and Reasoning". 2nd European Summer School on Artificial Intelligence (<A href="https://essai2024.di.uoa.gr/">ESSAI</A>). Athens, Greece. July 2024. <A href="./files/NeSy_KR_ESSAI2024.zip">Slides</A>. <A href="https://github.com/ChenJiaoyan/teaching/tree/main/uom">Contents</A>.</li>
+    <li style="margin-bottom:5px">"Data Engineering Techniques". Department of Computer Science, The University of Manchester. New unit under development. 2025-2026. </li>
+    <li style="margin-bottom:5px">"Advanced Topics in Knowledge Representation and Reasoning". Department of Computer Science, The University of Manchester. New unit under development. 2025-2026. </li>
     <li style="margin-bottom:5px">"Data Engineering (COMP60711)". Department of Computer Science, The University of Manchester. 2024-2025. </li>
     <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024, 2024-2025. </li>
+    <!--
+    <li style="margin-bottom:5px">"Neural-symbolic Knowledge Representation and Reasoning". 2nd European Summer School on Artificial Intelligence (<A href="https://essai2024.di.uoa.gr/">ESSAI</A>). Athens, Greece. July 2024. <A href="./files/NeSy_KR_ESSAI2024.zip">Slides</A>. <A href="https://github.com/ChenJiaoyan/teaching/tree/main/uom">Contents</A>.</li>
     <li style="margin-bottom:5px">"Knowledge Graph (English)". Southeast University. Guest Lecture. Summer 2023. </li>
 <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Intelligence"</A>. Department of Computer Science, University of Oxford. Group Class Teaching. Hilary Term 2022. </li>
 <li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University. Guest Lecture. 2021-2022, 2022-2023. </li>
 <li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to CS551J Knowledge Representation and Reasoning)</li>
+-->
 </ul></p>
 
-<h4>Research Students / Associates (Team)</h4>
+<h4>Current Research Students / Associates (Team)</h4>
 <p><ul>
     <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
     <li style="margin-bottom:5px">Hanhua Hong (PhD, Department of Computer Science, The University of Manchester, 09/2024 - )</li>
@@ -160,10 +178,10 @@ Research Interests
    <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - ) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 09/2022 - )</li>
     <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
-    <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - )</li>
     </ul></p>
+
+    <h4>Past Research Students / Associates</h4>
 <p>
-    &nbsp  &nbsp  &nbsp <b>(past)</b>
     <ul>
     <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/people/yuan.he/">Yuan He</A> (PhD, Department of Computer Science, University of Oxford, 2020 - 2024)</li>
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
