--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ Research Interests
     <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
     <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - 2024). </li>
     <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), and some NLP/AI conferences.</li>
+    <li style="margin-bottom:5px">Selective review of grant proposals and journal submissions.</li>
 
     <!--
     <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 - 2023).</li>
