--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ Research Interests
 <h4>Invited Talks and Tutorials</h4>
     <ul>
 
+        <li style="margin-bottom:5px">Ontology Embedding and Construction in the Large Language Model Era. Invited Talk in Southeast University, Nanjing. 10/01/2025. <A href="files/SEU_Report_Jan10.pdf">Slides</A></li>
         <li style="margin-bottom:5px">Integrating Knowledge Graphs and Large Language Models for Advancing Scientific Research. Tutorial at Learning on Graph Conference (LoG), 26/11/2024. <A href="files/LoG_Tutorial.pdf">Slides</A></li>
     <li style="margin-bottom:5px">Data Intensive Question Answering with Large Language Models. Invited Talk at University of Stuttgart. 31/10/2024. <A href="files/QA_LLM_Stuttgart_10_2024.pdf">Slides</A></li>
     <li style="margin-bottom:5px">Knowledge Engineering meets (Large) Language Models. Amazon Search Research Talk Series. 12/07/2024. <A href="files/Amazon_Search_Research_Talk_July_2024.pdf">Slides</A></li>
