--- a/index.html
+++ b/index.html
@@ -48,11 +48,16 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">01/06/2025: To attend ESWC 2025 (present the ConCur project in the project networking track)</li>
+    <li style="margin-bottom:5px">15/05/2025: ACL 2025: One paper on attributed QA accepted in Main, one paper on Zero-shot Learning accepted in Findings</li>
+    <li style="margin-bottom:5px">05/04/2025: A survey on ontology embedding accepted by IEEE TKDE</li>
+    <li style="margin-bottom:5px">04/04/2025: A KG embedding paper accepted by SIGIR 2025</li>
+    <!--
+    <li style="margin-bottom:5px">27/03/2025: A taxonomy inference paper accepted by ESWC 2025</li>
     <li style="margin-bottom:5px">09/01/2025: Visit Southeast University</li>
     <li style="margin-bottom:5px">11/11/2024: Attend EMNLP'24</li>
     <li style="margin-bottom:5px">31/10/2024: Visit University of Stuttgart for invited talk</li>
     <li style="margin-bottom:5px">25/09/2024: Two papers accepted in NeurIPS'24</li>
-    <!--
     <li style="margin-bottom:5px">20/09/2024: One paper accepted in EMNLP'24</li>
     <li style="margin-bottom:5px">20/09/2024: Attending CCKS-IJCKG 2024 in Chongqing, China </li>
     <li style="margin-bottom:5px">19/08/2024: One paper accepted in ACM Transactions on the Web </li>
@@ -158,8 +163,8 @@ Research Interests
 
 <h4>Current Teaching</h4>
 <p><ul>
-    <li style="margin-bottom:5px">"Data Engineering Techniques". Department of Computer Science, The University of Manchester. New unit under development. 2025-2026. </li>
-    <li style="margin-bottom:5px">"Advanced Topics in Knowledge Representation and Reasoning". Department of Computer Science, The University of Manchester. New unit under development. 2025-2026. </li>
+    <li style="margin-bottom:5px">"Data Engineering Technologies (COMP63502)". Department of Computer Science, The University of Manchester. Unit Lead. 2025-2026. </li>
+    <li style="margin-bottom:5px">"Advanced Topics in Knowledge Representation and Reasoning (COMP64602)". Department of Computer Science, The University of Manchester. 2025-2026. </li>
     <li style="margin-bottom:5px">"Data Engineering (COMP60711)". Department of Computer Science, The University of Manchester. 2024-2025. </li>
     <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024, 2024-2025. </li>
     <!--
@@ -173,13 +178,14 @@ Research Interests
 
 <h4>Current Research Students / Associates (Team)</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
+    <li style="margin-bottom:5px">Hira Beril Kucuk (PhD, Department of Computer Science, The University of Manchester, 04/2025 - )</li>
+    <li style="margin-bottom:5px"><a href="https://scholar.google.com/citations?hl=en&user=HqVFCscAAAAJ">Hui Yang</a> (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
     <li style="margin-bottom:5px">Hanhua Hong (PhD, Department of Computer Science, The University of Manchester, 09/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
     <li style="margin-bottom:5px">Ian Hyland (half-time PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
+    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
    <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - ) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 09/2022 - )</li>
-    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
     </ul></p>
 
     <h4>Past Research Students / Associates</h4>
