--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
-    <li style="margin-bottom:5px">01/06/2025: To attend ESWC 2025 (present the ConCur project in the project networking track)</li>
-    <li style="margin-bottom:5px">15/05/2025: ACL 2025: One paper on attributed QA accepted in Main, one paper on Zero-shot Learning accepted in Findings</li>
-    <li style="margin-bottom:5px">05/04/2025: A survey on ontology embedding accepted by IEEE TKDE</li>
-    <li style="margin-bottom:5px">04/04/2025: A KG embedding paper accepted by SIGIR 2025</li>
+    <li style="margin-bottom:5px">01/06/2025: To attend ESWC 2025</li>
+    <li style="margin-bottom:5px">19/05/2025: Promoted to Senior Lecturer (Associate Professor)</li>
+    <li style="margin-bottom:5px">15/05/2025: two papers accepted in ACL 2025</li>
+    <li style="margin-bottom:5px">05/04/2025: the ontology embedding survey accepted by IEEE TKDE</li>
     <!--
+    <li style="margin-bottom:5px">04/04/2025: A KG embedding paper accepted by SIGIR 2025</li>
     <li style="margin-bottom:5px">27/03/2025: A taxonomy inference paper accepted by ESWC 2025</li>
     <li style="margin-bottom:5px">09/01/2025: Visit Southeast University</li>
     <li style="margin-bottom:5px">11/11/2024: Attend EMNLP'24</li>
