--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 
 <P>
-    I'm a Lecturer (Assistant Professor) in Department of Computer Science, The University of Manchester, and a part-time Senior Researcher in Department of Computer Science, University of Oxford.
-    Before that, I was a full-time Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and worked shortly as a postdoctoral in Heidelberg University.
+    I'm a Lecturer (Assistant Professor) in Department of Computer Science, The University of Manchester, and to be a Senior Lecturer (Associate Professor) from July 2025.
+    Before that, I was a Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and worked shortly as a postdoctoral in Heidelberg University.
     My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
@@ -49,10 +49,10 @@
     <p>
         <ul>
     <li style="margin-bottom:5px">01/06/2025: To attend ESWC 2025</li>
-    <li style="margin-bottom:5px">19/05/2025: Promoted to Senior Lecturer (Associate Professor)</li>
     <li style="margin-bottom:5px">15/05/2025: two papers accepted in ACL 2025</li>
     <li style="margin-bottom:5px">05/04/2025: the ontology embedding survey accepted by IEEE TKDE</li>
     <!--
+    <li style="margin-bottom:5px">19/05/2025: Promoted to Senior Lecturer (Associate Professor)</li>
     <li style="margin-bottom:5px">04/04/2025: A KG embedding paper accepted by SIGIR 2025</li>
     <li style="margin-bottom:5px">27/03/2025: A taxonomy inference paper accepted by ESWC 2025</li>
     <li style="margin-bottom:5px">09/01/2025: Visit Southeast University</li>
