--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <P>
-    I'm a Lecturer (Assistant Professor) in Department of Computer Science, The University of Manchester, and to be a Senior Lecturer (Associate Professor) from July 2025.
+    I joined the Computer Science department in The University of Manchester in 11/2022 as a permanent Lecturer (Assistant Professor), and will be a Senior Lecturer (Associate Professor) from July 2025.
     Before that, I was a Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and worked shortly as a postdoctoral in Heidelberg University.
     My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
@@ -72,11 +72,11 @@
 Research Interests
 </h4>
 <p><ul>
-<li style="margin-bottom:5px"> <b>Knowledge Representation</b>: construction and curation of knowledge graphs and ontologies.
+<li style="margin-bottom:5px"> <b>Knowledge Representation</b>: construction and curation of knowledge graphs and ontologies, semantic techniques.
 </li>
-<li style="margin-bottom:5px"> <b>Language Model and Data Intensive Systems</b>: augmenting large language models (LLMs) with knowledge graphs, ontologies and data lakes, retrieval augmented generation.
+    <li style="margin-bottom:5px"><b>Machine Learning</b>: knowledge representation learning, semantic embedding, neural-symbolic integration.
 </li>
-    <li style="margin-bottom:5px"><b>Machine Learning</b>: knowledge representation learning, neural-symbolic reasoning.
+    <li style="margin-bottom:5px"> <b>Data and Knowledge Management for AI</b>: evaluating and augmenting large language models (LLMs) with knowledge graphs, ontologies and structured data.
 </li>
 </ul>
 
@@ -88,24 +88,24 @@ Research Interests
 
 <!-- <P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM. Email me your CV or apply <A href="https://www.jobs.manchester.ac.uk/Job/JobDetail?JobId=27858">here</A>.</P> -->
 
-<h4>Current Research Grants and Projects</h4>
+<h4>Research Grants</h4>
 <p><ul>
     <li style="margin-bottom:5px">
         EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
+    </li>
+    <li style="margin-bottom:5px">
+        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 9K GBP + 14K CAD, 10/2024 - 03/2026, PI with Jia Xue from University of Toronto.
     </li>
      <li style="margin-bottom:5px">
         EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 1.1M GBP, 12/2021 - 05/2025, Research Co-Investigator.
     </li>
     <li style="margin-bottom:5px">
-        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 9K GBP + 14K CAD, 10/2024 - 03/2026, PI with Jia Xue from University of Toronto.
-    </li>
-    <li style="margin-bottom:5px">
         Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 30.6K GBP, 07/2024 - 01/2025, PI.
     </li>
-    <!--
     <li style="margin-bottom:5px">
         Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 19K GBP, 11/2022 - 04/2023, PI.
     </li>
+    <!--
     <li style="margin-bottom:5px">
         As a researcher, I'm also working on the e-commerce taxonomy curation projection funded by eBay in University of Oxford, and have finished working for several knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
     project of the Alan Turing Institute, and the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">knowledge graph construction</A> project funded by Samsung Research UK.
@@ -117,17 +117,17 @@ Research Interests
 </p>
 
 
-<h4>Current Services</h4>
+<h4>Recent Services</h4>
 <p><ul>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 - ).</li>
     <li style="margin-bottom:5px">Editor Board of Data Intelligence (2021 - ).</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
-    <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
-    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - 2024). </li>
-    <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), and some NLP/AI conferences.</li>
-    <li style="margin-bottom:5px">Selective review of grant proposals and journal papers.</li>
+    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">Bio-ML</A> in ISWC (2022 - ). </li>
+    <li style="margin-bottom:5px">PC/SPC/Area Chair of ISWC, The Web Conference, NeurIPS, ARR, etc.</li>
+    <li style="margin-bottom:5px">Regular proposal reviewer for main research grant bodies in the UK and EU like ERC, DFG and NWO.</li>
 
     <!--
+    <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
     <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 - 2023).</li>
     <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), AAAI, IJCAI, ESWC, CIKM, ACL, etc.</li>
     <li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 - 2023).</li>
@@ -143,7 +143,7 @@ Research Interests
 <h4>Publications</h4>
 <p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./files/CV_Jiaoyan.pdf#page=6">Selected</A></p>
 
-<h4>Invited Talks and Tutorials</h4>
+<h4>Selective Invited Talks and Tutorials</h4>
     <ul>
 
         <li style="margin-bottom:5px">Ontology Embedding and Construction in the Large Language Model Era. Invited Talk in Southeast University, Nanjing. 10/01/2025. <A href="files/SEU_Report_Jan10.pdf">Slides</A></li>
@@ -153,7 +153,6 @@ Research Interests
 <li style="margin-bottom:5px">Neural-symbolic Knowledge Representation and Reasoning with Ontology and Knowledge Graph Embeddings. Seminar at King Abdullah University of Science and Technology (KAUST), 04/2024. <A href="files/Seminar_KAUST_04_2024.pdf">Slides</A></li>
 <li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-ijcai-2023/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in IJCAI 2023 (August 19 - 25). </li>
 </ul>
-<p> &nbsp  &nbsp  &nbsp See <A href="./files/CV_Jiaoyan.pdf#page=2">CV</A> for a complete list</p>
 
 <h4>Software</h4>
 <p><ul>
@@ -162,12 +161,12 @@ Research Interests
 </ul></p>
 
 
-<h4>Current Teaching</h4>
+<h4>Teaching in Manchester</h4>
 <p><ul>
-    <li style="margin-bottom:5px">"Data Engineering Technologies (COMP63502)". Department of Computer Science, The University of Manchester. Unit Lead. 2025-2026. </li>
-    <li style="margin-bottom:5px">"Advanced Topics in Knowledge Representation and Reasoning (COMP64602)". Department of Computer Science, The University of Manchester. 2025-2026. </li>
-    <li style="margin-bottom:5px">"Data Engineering (COMP60711)". Department of Computer Science, The University of Manchester. 2024-2025. </li>
-    <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024, 2024-2025. </li>
+    <li style="margin-bottom:5px">"Data Engineering Technologies (COMP63502)". 2025-2026. </li>
+    <li style="margin-bottom:5px">"Advanced Topics in Knowledge Representation and Reasoning (COMP64602)". 2025-2026. </li>
+    <li style="margin-bottom:5px">"Data Engineering (COMP60711)". 2024-2025. </li>
+    <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". 2023-2024, 2024-2025. </li>
     <!--
     <li style="margin-bottom:5px">"Neural-symbolic Knowledge Representation and Reasoning". 2nd European Summer School on Artificial Intelligence (<A href="https://essai2024.di.uoa.gr/">ESSAI</A>). Athens, Greece. July 2024. <A href="./files/NeSy_KR_ESSAI2024.zip">Slides</A>. <A href="https://github.com/ChenJiaoyan/teaching/tree/main/uom">Contents</A>.</li>
     <li style="margin-bottom:5px">"Knowledge Graph (English)". Southeast University. Guest Lecture. Summer 2023. </li>
@@ -179,14 +178,15 @@ Research Interests
 
 <h4>Current Research Students / Associates (Team)</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Hira Beril Kucuk (PhD, Department of Computer Science, The University of Manchester, 04/2025 - )</li>
-    <li style="margin-bottom:5px"><a href="https://scholar.google.com/citations?hl=en&user=HqVFCscAAAAJ">Hui Yang</a> (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
-    <li style="margin-bottom:5px">Hanhua Hong (PhD, Department of Computer Science, The University of Manchester, 09/2024 - )</li>
-    <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
-    <li style="margin-bottom:5px">Ian Hyland (half-time PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
-    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
-   <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - ) (external co-supervisor)</li>
-    <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 09/2022 - )</li>
+    <li style="margin-bottom:5px"><a href="https://scholar.google.com/citations?hl=en&user=HqVFCscAAAAJ">Hui Yang</a> (Postdoctoral, 06/2024 - )</li>
+    <li style="margin-bottom:5px">Hira Beril Kucuk (PhD, 04/2025 - )</li>
+    <li style="margin-bottom:5px">Hanhua Hong (PhD, 09/2024 - )</li>
+    <li style="margin-bottom:5px">Yiping Song (PhD, 04/2024 - )</li>
+    <li style="margin-bottom:5px">Ian Hyland (half-time PhD, 04/2024 - )</li>
+    <li style="margin-bottom:5px">Zhenyu Wu (PhD, 09/2022 - )</li>
+    </br>
+    <li style="margin-bottom:5px">Tianzhe Zhao (visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
+   <li style="margin-bottom:5px">Balazs Mosolygo (externally co-supervised PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - )</li>
     </ul></p>
 
     <h4>Past Research Students / Associates</h4>
