--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Research Interests
 
 </p>
     <P>
-        &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> of these topics in UoM. Please email me if you have interests.
+        &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> of these topics in UoM. Please email me if you have interests. <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=37800">RAG project</a>, <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">LLM explanability and evaluation project</a>
     </P>
 
 
