--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <P>
-    I joined the Computer Science department in The University of Manchester in 11/2022 as a permanent Lecturer (Assistant Professor), and will be a Senior Lecturer (Associate Professor) from July 2025.
+    I joined the Computer Science department in The University of Manchester in 11/2022 as a teaching and research Lecturer (as Assistant Professor), and will be a Senior Lecturer (as Associate Professor) from August 2025.
     Before that, I was a Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and worked shortly as a postdoctoral in Heidelberg University.
     My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
@@ -48,10 +48,12 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
-    <li style="margin-bottom:5px">01/06/2025: To attend ESWC 2025</li>
+    <li style="margin-bottom:5px">31 Jul - 08 Aug: visit University of Toronto, attend KDD 2025</li>
+    <li style="margin-bottom:5px">20 Jul: attend ICDCS 2025 in Glasgow</li>
+    <li style="margin-bottom:5px">01/06/2025: attend ESWC 2025</li>
+    <!--
     <li style="margin-bottom:5px">15/05/2025: two papers accepted in ACL 2025</li>
     <li style="margin-bottom:5px">05/04/2025: the ontology embedding survey accepted by IEEE TKDE</li>
-    <!--
     <li style="margin-bottom:5px">19/05/2025: Promoted to Senior Lecturer (Associate Professor)</li>
     <li style="margin-bottom:5px">04/04/2025: A KG embedding paper accepted by SIGIR 2025</li>
     <li style="margin-bottom:5px">27/03/2025: A taxonomy inference paper accepted by ESWC 2025</li>
@@ -82,7 +84,7 @@ Research Interests
 
 </p>
     <P>
-        &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> of these topics in UoM. Please email me if you have interests. <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=37800">RAG project</a>, <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">LLM explanability and evaluation project</a>
+        &nbsp  &nbsp  &nbsp Please email me if you have interests in the following PhD projects <a href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=37800">RAG project</a>, <a href="https://www.findaphd.com/phds/project/knowledge-graph-for-large-language-model-explainability-and-evaluation/?p185828">LLM explanability and evaluation project</a>, or other topics.
     </P>
 
 
