--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 
 <P>
-    I joined the Computer Science department in The University of Manchester in 11/2022 as a teaching and research Lecturer (as Assistant Professor), and will be a Senior Lecturer (as Associate Professor) from August 2025.
-    Before that, I was a Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and worked shortly as a postdoctoral in Heidelberg University.
-    My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
+    I'm a Senior Lecturer (as Associate Professor) in the Computer Science department in The University of Manchester.
+    Before that, I was a Lecturer in The University of Manchester (from Nov 2022), and a Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A> from Nov 2017), and worked shortly as a postdoctoral in Heidelberg University.
+    My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology in 2016 and 2011, respectively. I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
     <h4 style="color: #d90909;">Latest News!</h4>
